# kafka-stack

./: .gitignore  README.md
kafka/: full-stack.yml
python3/: pyproject.toml
python3/simple/: .env-example  consumer.py  create_topics.py  delete_topics.py  producer.py
